[frontend] Fix extra space.

--- a/src/frontend/src/views/Project/Project.scss
+++ b/src/frontend/src/views/Project/Project.scss
@@ -55,7 +55,7 @@
 }
 
 .openFiles {
-    display: inline-block;
+    display: block;
     padding-left:0.45em;
     flex:1;
     overflow-x:auto;
